Uppangala 0.1.9003 Preliminary results vignette beginning

Uppangala 0.1.9002 null_models functions

Uppangala 0.1.9001 README

Uppangala 0.1.9000 First Github commit