@@ -10,6 +10,7 @@ export(genTrees)
 export(null_model)
 export(plot_model)
 export(quadrats)
+export(regression_table)
 export(stars)
 export(topo_classes)
 importFrom(RSAGA,rsaga.aspect)
