@@ -19,6 +19,7 @@ genCaptions <- function(){
                 'Leaf area (mm\u00b2)',
                 'Logarithm of leaf area (mm\u00b2)',
                 'Leaf dry matter content (mg.g\u207b\u00b9)',
+                'Leaf tissue density (g.mm\u207b\u00b3)',
                 'Specific leaf area (m\u00b2.kg\u207b\u00b9)',
                 'Logarithm of specific leaf area (m\u00b2.kg\u207b\u00b9)',
                 'Specific holes area (mm\u00b2.mm\u207b\u00b2)',
@@ -34,6 +35,7 @@ genCaptions <- function(){
                       'LA',
                       'log(LA)',
                       'LDMC',
+                      'LTD',
                       'SLA',
                       'log(SLA)',
                       'SHA',
